# oss-infra/gen/swagger/combined_out.swagger.json
@@ -22,7 +22,7 @@
   "paths": {
     "/v1/oss/file/upload": {
       "post": {
-        "summary": "---------------------api--------------------\n上传文件",
+        "summary": "上传文件",
         "operationId": "FileService_UploadFile",
         "responses": {
           "200": {
@@ -79,112 +79,9 @@
           "FileService"
         ]
       }
-    },
-    "/v1/oss/file/{file_id}": {
-      "get": {
-        "summary": "获取文件信息",
-        "operationId": "FileService_GetFileInfo",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/fileGetFileInfoResp"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "file_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "FileService"
-        ]
-      },
-      "delete": {
-        "summary": "删除文件",
-        "operationId": "FileService_DeleteFile",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "file_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "FileService"
-        ]
-      }
-    },
-    "/v1/oss/file/list": {
-      "get": {
-        "summary": "获取文件列表",
-        "operationId": "FileService_ListFiles",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/fileListFilesResp"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "category",
-            "description": "文件分类筛选",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "page",
-            "description": "页码",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "page_size",
-            "description": "页大小",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "tags": [
-          "FileService"
-        ]
-      }
     }
   },
   "definitions": {
-    "fileCheckFileAccessResp": {
-      "type": "object",
-      "properties": {
-        "has_access": {
-          "type": "boolean"
-        },
-        "reason": {
-          "type": "string",
-          "title": "无权限时的原因"
-        }
-      }
-    },
     "fileFileInfo": {
       "type": "object",
       "properties": {
@@ -231,38 +128,6 @@
           "type": "string"
         },
         "expires_in": {
-          "type": "integer",
-          "format": "int32"
-        }
-      }
-    },
-    "fileGetFileInfoResp": {
-      "type": "object",
-      "properties": {
-        "file_info": {
-          "$ref": "#/definitions/fileFileInfo"
-        }
-      }
-    },
-    "fileListFilesResp": {
-      "type": "object",
-      "properties": {
-        "files": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/fileFileInfo"
-          }
-        },
-        "total": {
-          "type": "string",
-          "format": "int64"
-        },
-        "page": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "page_size": {
           "type": "integer",
           "format": "int32"
         }
